Fix a horizontal overflow issue

--- a/media/css/oliverhodgson.css
+++ b/media/css/oliverhodgson.css
@@ -441,13 +441,6 @@ The content.
   background-size: 136px 32px, auto;
   background-repeat: repeat-x, repeat-x;
 }
-@media (min-width: 1000px) {
-  .separator {
-    margin-left: -2rem;
-    margin-right: -2rem;
-    width: calc(100% + 4rem);
-  }
-}
 
 .gallery {
   list-style: none;
@@ -456,18 +449,18 @@ The content.
   padding: 0 1rem;
   margin: 0;
 }
+.gallery li {
+  flex-basis: 50%;
+  padding: 1rem;
+}
+@media (min-width: 750px) {
+  .gallery {
+    flex-wrap: nowrap;
+  }
   .gallery li {
-    flex-basis: 50%;
-    padding: 1rem;
+    flex-basis: 25%;
   }
-  @media (min-width: 750px) {
-    .gallery {
-      flex-wrap: nowrap;
-    }
-    .gallery li {
-      flex-basis: 25%;
-    }
-  }
+}
 
 /* ********************
 
